--- a/DB.html
+++ b/DB.html
@@ -116,6 +116,7 @@
 <tr><td style="text-align: right;"> 187</td><td>CGPTUSDT      </td><td style="text-align: right;"> 0.0864721  </td><td style="text-align: right;"> 0.0809965  </td><td style="text-align: right;"> 0.0864721  </td><td style="text-align: right;"> 0.0757   </td><td style="text-align: right;"> 0.0821485  </td><td>Square    </td><td>06:09:18 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 188</td><td>GPSUSDT       </td><td style="text-align: right;"> 0.0110857  </td><td style="text-align: right;"> 0.0106587  </td><td style="text-align: right;"> 0.0110857  </td><td style="text-align: right;"> 0.01024  </td><td style="text-align: right;"> 0.0105315  </td><td>Pentagonal</td><td>06:09:32 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 189</td><td>BMTUSDT       </td><td style="text-align: right;"> 0.0669446  </td><td style="text-align: right;"> 0.0638353  </td><td style="text-align: right;"> 0.0669446  </td><td style="text-align: right;"> 0.0608   </td><td style="text-align: right;"> 0.0635974  </td><td>Pentagonal</td><td>06:09:34 AM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;"> 190</td><td>LISTAUSDT     </td><td style="text-align: right;"> 0.369936   </td><td style="text-align: right;"> 0.300851   </td><td style="text-align: right;"> 0.369936   </td><td style="text-align: right;"> 0.2389   </td><td style="text-align: right;"> 0.35144    </td><td>Binary    </td><td>06:14:26 AM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
