--- a/DB.html
+++ b/DB.html
@@ -117,6 +117,7 @@
 <tr><td style="text-align: right;"> 188</td><td>GPSUSDT       </td><td style="text-align: right;"> 0.0110857  </td><td style="text-align: right;"> 0.0106587  </td><td style="text-align: right;"> 0.0110857  </td><td style="text-align: right;"> 0.01024  </td><td style="text-align: right;"> 0.0105315  </td><td>Pentagonal</td><td>06:09:32 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 189</td><td>BMTUSDT       </td><td style="text-align: right;"> 0.0669446  </td><td style="text-align: right;"> 0.0638353  </td><td style="text-align: right;"> 0.0669446  </td><td style="text-align: right;"> 0.0608   </td><td style="text-align: right;"> 0.0635974  </td><td>Pentagonal</td><td>06:09:34 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 190</td><td>LISTAUSDT     </td><td style="text-align: right;"> 0.369936   </td><td style="text-align: right;"> 0.300851   </td><td style="text-align: right;"> 0.369936   </td><td style="text-align: right;"> 0.2389   </td><td style="text-align: right;"> 0.35144    </td><td>Binary    </td><td>06:14:26 AM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;"> 191</td><td>WLDUSDT       </td><td style="text-align: right;"> 1.90196    </td><td style="text-align: right;"> 1.34297    </td><td style="text-align: right;"> 1.90196    </td><td style="text-align: right;"> 0.881    </td><td style="text-align: right;"> 1.80686    </td><td>Binary    </td><td>06:19:17 AM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
