Update HTML files

--- a/DB.html
+++ b/DB.html
@@ -122,6 +122,7 @@
 <tr><td style="text-align: right;"> 192</td><td>BIOUSDT       </td><td style="text-align: right;"> 0.164705   </td><td style="text-align: right;"> 0.15335    </td><td style="text-align: right;"> 0.164705   </td><td style="text-align: right;"> 0.1424   </td><td style="text-align: right;"> 0.15647    </td><td>Pentagonal</td><td>06:31:27 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 193</td><td>EDUUSDT       </td><td style="text-align: right;"> 0.16035    </td><td style="text-align: right;"> 0.14372    </td><td style="text-align: right;"> 0.16035    </td><td style="text-align: right;"> 0.128    </td><td style="text-align: right;"> 0.152333   </td><td>Triangular</td><td>06:57:53 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 194</td><td>HAEDALUSDT    </td><td style="text-align: right;"> 0.16549    </td><td style="text-align: right;"> 0.148113   </td><td style="text-align: right;"> 0.16549    </td><td style="text-align: right;"> 0.1317   </td><td style="text-align: right;"> 0.157216   </td><td>Triangular</td><td>09:15:36 AM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;"> 195</td><td>ETHFIUSDT     </td><td style="text-align: right;"> 1.59758    </td><td style="text-align: right;"> 1.35479    </td><td style="text-align: right;"> 1.59758    </td><td style="text-align: right;"> 1.132    </td><td style="text-align: right;"> 1.5177     </td><td>Pentagonal</td><td>10:25:22 AM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
