--- a/DB.html
+++ b/DB.html
@@ -125,6 +125,7 @@
 <tr><td style="text-align: right;"> 195</td><td>ETHFIUSDT     </td><td style="text-align: right;"> 1.59758    </td><td style="text-align: right;"> 1.35479    </td><td style="text-align: right;"> 1.59758    </td><td style="text-align: right;"> 1.132    </td><td style="text-align: right;"> 1.5177     </td><td>Pentagonal</td><td>10:25:22 AM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 197</td><td>AVNTUSDT      </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>05:16:03 PM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 198</td><td>ZKCUSDT       </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>05:16:04 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;"> 199</td><td>DOGSUSDT      </td><td style="text-align: right;"> 0.000119715</td><td style="text-align: right;"> 0.000118856</td><td style="text-align: right;"> 0.000119715</td><td style="text-align: right;"> 0.000118 </td><td style="text-align: right;"> 0.00011373 </td><td>Triangular</td><td>05:20:13 PM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
