Update HTML files

--- a/DB.html
+++ b/DB.html
@@ -126,6 +126,7 @@
 <tr><td style="text-align: right;"> 197</td><td>AVNTUSDT      </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>05:16:03 PM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 198</td><td>ZKCUSDT       </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;"> 0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>05:16:04 PM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;"> 200</td><td>HMSTRUSDT     </td><td style="text-align: right;"> 0.000640755</td><td style="text-align: right;"> 0.000630335</td><td style="text-align: right;"> 0.000640755</td><td style="text-align: right;"> 0.00062  </td><td style="text-align: right;"> 0.000608717</td><td>Triangular</td><td>07:41:47 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;"> 201</td><td>WLFIUSDT      </td><td style="text-align: right;"> 0.242439   </td><td style="text-align: right;"> 0.212965   </td><td style="text-align: right;"> 0.242439   </td><td style="text-align: right;"> 0.1854   </td><td style="text-align: right;"> 0.230317   </td><td>Triangular</td><td>08:05:04 PM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
