--- a/DB.html
+++ b/DB.html
@@ -6,9 +6,14 @@
 </tbody>
 </table>  <br><br><br><br> <h1> To_buy </h1> <table id="customers"> 
 <thead>
-<tr></tr>
+<tr><th style="text-align: right;">  ID</th><th>Symbol  </th><th style="text-align: right;">       A1</th><th style="text-align: right;">       A2</th><th style="text-align: right;">     Wait</th><th style="text-align: right;">    Low</th><th style="text-align: right;">       SL</th><th>Pattern   </th><th>Time       </th><th>Date      </th></tr>
 </thead>
 <tbody>
+<tr><td style="text-align: right;">   1</td><td>DOGEUSDT</td><td style="text-align: right;">0.253166 </td><td style="text-align: right;">0.232257 </td><td style="text-align: right;">0.253166 </td><td style="text-align: right;">0.21225</td><td style="text-align: right;">0.240508 </td><td>Pentagonal</td><td>09:54:06 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;">   2</td><td>FTTUSDT </td><td style="text-align: right;">1.05922  </td><td style="text-align: right;">0.907228 </td><td style="text-align: right;">1.05922  </td><td style="text-align: right;">0.767  </td><td style="text-align: right;">1.00626  </td><td>Pentagonal</td><td>09:54:22 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;">   3</td><td>UTKUSDT </td><td style="text-align: right;">0.0265074</td><td style="text-align: right;">0.0257025</td><td style="text-align: right;">0.0265074</td><td style="text-align: right;">0.02491</td><td style="text-align: right;">0.0251821</td><td>Pentagonal</td><td>09:54:50 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;">   4</td><td>NEARUSDT</td><td style="text-align: right;">3.20689  </td><td style="text-align: right;">2.77482  </td><td style="text-align: right;">3.20689  </td><td style="text-align: right;">2.374  </td><td style="text-align: right;">3.04655  </td><td>Square    </td><td>09:54:51 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;">   5</td><td>RIFUSDT </td><td style="text-align: right;">0.060395 </td><td style="text-align: right;">0.0577171</td><td style="text-align: right;">0.060395 </td><td style="text-align: right;">0.0551 </td><td style="text-align: right;">0.0573752</td><td>Pentagonal</td><td>09:55:04 PM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
