Update HTML files

--- a/DB.html
+++ b/DB.html
@@ -54,6 +54,7 @@
 <tr><td style="text-align: right;">  40</td><td>HOLOUSDT      </td><td style="text-align: right;"> 0.0295843  </td><td style="text-align: right;">0.0274419  </td><td style="text-align: right;"> 0.0295843  </td><td style="text-align: right;">0.02538  </td><td style="text-align: right;"> 0.0281051  </td><td>Binary    </td><td>09:58:59 PM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;">  41</td><td>AVNTUSDT      </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;">0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;">0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>09:59:00 PM</td><td>2025-09-22</td></tr>
 <tr><td style="text-align: right;">  42</td><td>ZKCUSDT       </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;">0.00568682 </td><td style="text-align: right;"> 0.0058954  </td><td style="text-align: right;">0.005482 </td><td style="text-align: right;"> 0.00560063 </td><td>Square    </td><td>09:59:01 PM</td><td>2025-09-22</td></tr>
+<tr><td style="text-align: right;">  43</td><td>PENGUUSDT     </td><td style="text-align: right;"> 0.0316921  </td><td style="text-align: right;">0.0300286  </td><td style="text-align: right;"> 0.0316921  </td><td style="text-align: right;">0.02841  </td><td style="text-align: right;"> 0.0301075  </td><td>Triangular</td><td>10:40:05 PM</td><td>2025-09-22</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
