--- a/DB.html
+++ b/DB.html
@@ -63,6 +63,7 @@
 <tr><td style="text-align: right;">  45</td><td>TSTUSDT       </td><td style="text-align: right;"> 0.0252038  </td><td style="text-align: right;">0.0244563  </td><td style="text-align: right;"> 0.0252038  </td><td style="text-align: right;">0.02372   </td><td style="text-align: right;"> 0.0239436  </td><td>Pentagonal</td><td>12:03:00 AM</td><td>2025-09-23</td></tr>
 <tr><td style="text-align: right;">  46</td><td>MUBARAKUSDT   </td><td style="text-align: right;"> 0.0317952  </td><td style="text-align: right;">0.0294216  </td><td style="text-align: right;"> 0.0317952  </td><td style="text-align: right;">0.02714   </td><td style="text-align: right;"> 0.0302055  </td><td>Binary    </td><td>12:03:12 AM</td><td>2025-09-23</td></tr>
 <tr><td style="text-align: right;">  47</td><td>NEIROUSDT     </td><td style="text-align: right;"> 0.000288652</td><td style="text-align: right;">0.000286246</td><td style="text-align: right;"> 0.000288652</td><td style="text-align: right;">0.00028385</td><td style="text-align: right;"> 0.00027422 </td><td>Square    </td><td>01:07:38 AM</td><td>2025-09-23</td></tr>
+<tr><td style="text-align: right;">  48</td><td>DOGSUSDT      </td><td style="text-align: right;"> 0.00011842 </td><td style="text-align: right;">0.000117909</td><td style="text-align: right;"> 0.00011842 </td><td style="text-align: right;">0.0001174 </td><td style="text-align: right;"> 0.000112499</td><td>Pentagonal</td><td>01:17:54 AM</td><td>2025-09-23</td></tr>
 </tbody>
 </table>  <br><br><br><br> <h1> Winners </h1> <table id="customers"> <thead>
 <tr></tr>
